--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,66 @@
 .intro-1 {
   justify-content: right;
 }
+
+.hero-background {
+  width: 100%;
+  height: 100vh;
+  height: 100svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  transition: 0.5s;
+}
+
+#hero-video {
+  width: 100%;
+  height: 100vh;
+  height: 100svh;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.hero-overlay {
+  height: 100vh;
+  height: 100svh;
+  width: 100%;
+  background-color: rgba(43, 42, 42, 0.2);
+  position: absolute;
+  top: 0;
+  z-index: 0;
+}
+
+.hero-text {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 2;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: rgb(40, 40, 46);
+}
+
+h1 {
+  font-size: 5em;
+  animation-name: fade;
+  animation-duration: 4s;
+}
+
+.intro-p {
+  font-size: 2em;
+  height: 70%;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+    margin-left: 3em;
+  }
+}
