--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -34,9 +34,12 @@
   height: 60px;
 }
 
-@media only screen and (max-width: 700px) {
-  #navbar-style {
-    float: right;
-    flex-direction: column;
+@media only screen and (max-width: 900px) {
+  .nav-item {
+    font-size: 1.2em;
+  }
+
+  .logo {
+    height: 2em;
   }
 }
