--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Sora:wght@200;400;500&family=Urbanist:wght@300;500;600;700&display=swap");
+
 .intro-1 {
   justify-content: right;
 }
@@ -36,31 +38,41 @@
 
 .hero-text {
   width: 100%;
-  height: 80%;
+  height: 75%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   z-index: 2;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: rgb(40, 40, 46);
 }
 
 h1 {
   font-size: 5em;
   animation-name: fade;
   animation-duration: 4s;
+  font-family: "Courgette", cursive;
+  color: rgba(245, 240, 240, 0.9);
 }
 
 .intro-p {
-  font-size: 2em;
-  height: 70%;
+  font-size: 2.5em;
+  height: 75%;
+  color: rgba(245, 240, 240, 0.8);
+  font-family: "Urbanist", sans-serif;
 }
 
 @keyframes fade {
   0% {
     opacity: 0;
     margin-left: 3em;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  h1 {
+    font-size: 3em;
+  }
+  .intro-p {
+    font-size: 1.5em;
   }
 }
