--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -67,6 +67,11 @@ a.project-github {
 }
 
 @media only screen and (max-width: 1400px) {
+  .projects {
+    background-size: cover;
+    height: 900px;
+  }
+
   .carousel {
     height: 80vh;
   }
@@ -111,9 +116,9 @@ a.project-github {
   }
 
   .embed-responsive-item {
-    height: 45vh;
-    width: 50%;
-    padding-block-end: 2%;
+    height: 40vh;
+    width: 35%;
+    padding-block-end: 4%;
   }
 
   .carousel-caption h3 {
