--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -66,33 +66,36 @@ a.project-github {
   margin-block-end: 0;
 }
 
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1100px) and (max-height: 700px) and (min-height: 600px) {
   .projects {
-    background-size: cover;
     height: 900px;
   }
 
   .carousel {
-    height: 80vh;
+    height: 75vh;
   }
 
-  .carousel-caption {
-    padding-block-start: 5px;
-    padding-block-end: 0;
-    margin: 0;
+  .carousel-item {
+    padding-block-start: 1%;
   }
 
   .embed-responsive-item {
     height: 40vh;
-    width: 30%;
+    width: 40%;
+  }
+
+  .carousel-caption {
+    padding-block-start: 1%;
+    padding-block-end: 0;
+    margin: 0;
   }
 
   .carousel-caption h3 {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 
   .carousel-caption p {
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-block-start: 0;
     margin-block-end: 0;
     z-index: 10;
@@ -105,20 +108,112 @@ a.project-github {
   }
 
   a.project-github {
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1400px) and (min-width: 951px) and (min-height: 701px) {
+  .projects {
+    height: 950px;
+  }
+
+  .carousel {
+    height: 70vh;
+  }
+
+  .carousel-item {
+    padding-block-start: 2%;
+  }
+
   .carousel-caption {
-    padding-block-end: 0%;
-    overflow: auto;
+    padding-block-start: 1%;
+    padding-block-end: 0;
+    margin: 0;
   }
 
   .embed-responsive-item {
     height: 40vh;
+    width: 40%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 1.5rem;
+  }
+
+  .carousel-caption p {
+    font-size: 1rem;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    z-index: 10;
+  }
+
+  .carousel-indicators {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  a.project-github {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 950px) and (min-width: 501px) {
+  .projects {
+    height: 500px;
+  }
+
+  .carousel {
+    height: 85vh;
+  }
+
+  .carousel-item {
+    padding-block-start: 1%;
+  }
+
+  .carousel-caption {
+    padding-block-end: 0%;
+    padding-block-start: 0%;
+    /* overflow: auto; */
+    height: 33%;
+  }
+
+  .embed-responsive-item {
+    height: 35vh;
     width: 35%;
-    padding-block-end: 4%;
+    padding-block-end: 0%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 0.9rem;
+  }
+
+  .carousel-caption p {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-height: 1400px) and (max-width: 500px) and (min-height: 300px) {
+  .projects {
+    background-size: cover;
+    height: 300px;
+  }
+
+  .carousel-caption {
+    padding-block-end: 0%;
+    overflow: auto;
+    padding-block-start: 0;
+    height: 50%;
+  }
+
+  .carousel-item {
+    padding-block-start: 3%;
+  }
+
+  .embed-responsive-item {
+    height: 20vh;
+    width: 30%;
+    padding-block-end: 0%;
   }
 
   .carousel-caption h3 {
@@ -127,5 +222,154 @@ a.project-github {
 
   .carousel-caption p {
     font-size: 0.5rem;
+  }
+}
+
+@media only screen and (max-height: 300px) {
+  .projects {
+    background-size: cover;
+    height: 400px;
+  }
+
+  .carousel-item {
+    padding-block-start: 1%;
+  }
+
+  .carousel {
+    height: 85vh;
+  }
+
+  .embed-responsive-item {
+    height: 40vh;
+    width: 30%;
+    padding-block-end: 0%;
+    margin-bottom: 0;
+  }
+
+  .carousel-caption {
+    padding-block-end: 0%;
+    padding-block-start: 0;
+    height: 20%;
+  }
+
+  .carousel-caption p {
+    font-size: 0.5rem;
+    height: 50vh;
+  }
+}
+
+@media screen and (min-height: 301px) and (max-height: 600px) and (max-width: 500px) {
+  .projects {
+    height: 700px;
+  }
+}
+
+@media screen and (min-height: 601px) and (max-height: 900px) and (max-width: 600px) {
+  .projects {
+    height: 900px;
+    background-position: 20% 30%;
+  }
+
+  .carousel-item {
+    padding-block-start: 5%;
+  }
+
+  .carousel {
+    height: 55vh;
+    margin-block-start: 10%;
+  }
+
+  .embed-responsive-item {
+    height: 20vh;
+    width: 60%;
+  }
+
+  .carousel-caption {
+    height: 55%;
+  }
+
+  .carousel-caption p {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (min-height: 901px) and (max-height: 1000px) and (max-width: 500px) {
+  .projects {
+    height: 1200px;
+    background-position: 20% 90%;
+  }
+
+  .carousel {
+    height: 50vh;
+    margin-block-start: 7%;
+  }
+
+  .carousel-item {
+    padding-block-start: 10%;
+  }
+
+  .embed-responsive-item {
+    height: 20vh;
+    width: 60%;
+    padding-block-end: 0%;
+    margin-bottom: 0;
+  }
+
+  .carousel-caption {
+    height: 55%;
+  }
+
+  .carousel-caption p {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (min-height: 1001px) and (max-height: 1500px) and (min-width: 700px) {
+  .projects {
+    height: 1400px;
+    background-position: 20% 90%;
+  }
+
+  .carousel {
+    height: 50vh;
+    margin-block-start: 7%;
+  }
+
+  .carousel-item {
+    padding-block-start: 7%;
+  }
+
+  .embed-responsive-item {
+    height: 20vh;
+    width: 60%;
+    padding-block-end: 0%;
+    margin-bottom: 0;
+  }
+
+  .carousel-caption {
+    height: 55%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 1.4rem;
+  }
+
+  .carousel-caption p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-height: 500px) and (max-height: 599px) {
+  .projects {
+    height: 600px;
+    background-position: 20% 90%;
+  }
+
+  .carousel-item {
+    padding-block-start: 7%;
+  }
+
+  .carousel-caption {
+    height: 25%;
   }
 }
