--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -55,7 +55,7 @@ body {
 @media only screen and (max-width: 1400px) {
   .contact {
     background-size: cover;
-    height: 900px;
+    height: 950px;
     padding-block-start: 10%;
   }
 
@@ -63,5 +63,45 @@ body {
     padding-block-start: 1%;
     width: 40%;
     border-radius: 5px;
+  }
+}
+
+@media only screen and (min-height: 1000px) and (max-height: 1400px) {
+  .contact {
+    background-size: cover;
+    height: 1400px;
+    padding-block-start: 10%;
+  }
+
+  #contact-form {
+    padding-block-start: 1%;
+    width: 60%;
+    border-radius: 5px;
+  }
+}
+
+@media only screen and (max-height: 999px) and (max-width: 550px) {
+  .contact {
+    background-size: cover;
+    height: 1000px;
+    width: 101%;
+    padding-block-start: 20%;
+  }
+
+  #contact-form {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-height: 300px) and (max-width: 700px) {
+  .contact {
+    background-size: cover;
+    height: 1000px;
+    width: 101%;
+    padding-block-start: 10%;
+  }
+
+  #contact-form {
+    width: 90%;
   }
 }
