--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -37,7 +37,7 @@
   font-family: "Urbanist", sans-serif;
 }
 
-p {
+.card-text {
   font-size: 18px;
   margin-top: 10px;
   text-align: justify;
@@ -79,15 +79,15 @@ p {
   outline-color: #000000;
 }
 
-@media only screen and (max-width: 1400px) {
+@media screen and (min-width: 600px) and (max-width: 1000px) and (max-height: 500px) {
   .about {
-    background-size: cover;
-    height: 900px;
+    height: 700px;
   }
 
   #about-underlay {
-    height: 80vh;
+    height: 85vh;
     padding-block-end: 1%;
+    top: 10%;
   }
 
   .card-title {
@@ -96,13 +96,11 @@ p {
 
   .card-subtitle {
     font-size: 3vh;
-    font-style: oblique;
-    margin-top: 10px;
-    font-family: "Urbanist", sans-serif;
+    margin-block-start: 10px;
   }
 
-  p {
-    font-size: 2.5vh;
+  .card-text {
+    font-size: 3vh;
     margin-block-start: 2px;
   }
 
@@ -120,5 +118,123 @@ p {
   .linkedin {
     font-size: 5vh;
     margin-block-end: 2px;
+  }
+}
+
+@media screen and (max-width: 1000px) and (min-height: 600px) and (max-height: 800px) {
+  .about {
+    height: 1000px;
+  }
+
+  #about-underlay {
+    height: 80%;
+    width: 80%;
+    top: 7%;
+  }
+
+  .card-title {
+    font-size: 3.5vh;
+  }
+
+  .card-subtitle {
+    font-size: 2.5vh;
+  }
+
+  .card-text {
+    font-size: 2vh;
+    margin-block-start: 3%;
+  }
+
+  .my-photo {
+    height: 10vh;
+  }
+
+  .github {
+    font-size: 3vh;
+  }
+
+  .linkedin {
+    font-size: 3vh;
+  }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 361px) and (min-height: 601px) and (max-height: 1400px) {
+  .about {
+    height: 1000px;
+  }
+
+  #about-underlay {
+    height: 81%;
+    width: 80%;
+    top: 7%;
+  }
+
+  .card-title {
+    font-size: 3vh;
+  }
+
+  .card-subtitle {
+    font-size: 2vh;
+  }
+
+  .card-text {
+    font-size: 100%;
+    margin-block-start: 3%;
+  }
+
+  .my-photo {
+    height: 10vh;
+  }
+
+  .github {
+    font-size: 3vh;
+  }
+
+  .linkedin {
+    font-size: 3vh;
+  }
+}
+
+@media screen and (min-height: 1000px) and (min-width: 750px) {
+  .about {
+    height: 100vh;
+    background-position: top;
+  }
+
+  #about-underlay {
+    height: 57%;
+    width: 80%;
+    top: 10%;
+  }
+
+  .card-title {
+    font-size: 2.5vh;
+  }
+
+  .card-subtitle {
+    font-size: 1.5vh;
+  }
+
+  .card-text {
+    font-size: 100%;
+    margin-block-start: 3%;
+  }
+
+  .my-photo {
+    height: 10vh;
+  }
+
+  .github {
+    font-size: 3vh;
+  }
+
+  .linkedin {
+    font-size: 3vh;
+  }
+}
+
+@media screen and (min-height: 551px) {
+  .about {
+    height: 1000px;
   }
 }
