--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -68,7 +68,25 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) and (min-width: 501px) {
+  h1 {
+    font-size: 4em;
+  }
+  .intro-p {
+    font-size: 2em;
+  }
+
+  .hero-text {
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .hero-text {
+    justify-content: center;
+    text-align: center;
+  }
+
   h1 {
     font-size: 3em;
   }
