--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -38,12 +38,22 @@
   height: 60px;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 500px) {
   .nav-item {
     font-size: 0.9em;
   }
 
   .logo {
     height: 2em;
+  }
+}
+
+@media only screen and (min-width: 501px) and (max-width: 1000px) {
+  .nav-item {
+    font-size: 1.5em;
+  }
+
+  .logo {
+    height: 2.3em;
   }
 }
