--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -233,7 +233,7 @@
   }
 }
 
-@media screen and (min-height: 551px) {
+@media screen and (max-height: 600px) {
   .about {
     height: 1000px;
   }
