--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,8 +2,6 @@
 
 #navbar-style {
   background: transparent;
-  /* padding-left: 20px; */
-  /* padding-right: 20px; */
   z-index: 999;
   position: absolute;
   width: 100%;
@@ -13,7 +11,8 @@
 .nav-item {
   text-align: center;
   color: white;
-  margin: 15px;
+  display: flex;
+  margin-inline: 1vw;
   text-decoration: none;
   font-size: 2.5vh;
   font-size: 2.5svh;
@@ -39,23 +38,3 @@
   height: 6vh;
   height: 6svh;
 }
-
-/* @media only screen and (max-width: 500px) {
-  .nav-item {
-    font-size: 0.9em;
-  }
-
-  .logo {
-    height: 2em;
-  }
-}
-
-@media only screen and (min-width: 501px) and (max-width: 1000px) {
-  .nav-item {
-    font-size: 1.5em;
-  }
-
-  .logo {
-    height: 2.3em;
-  }
-} */
