--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -43,11 +43,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  text-align: center;
   z-index: 2;
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 8vh;
+  font-size: 8svh;
   animation-name: fade;
   animation-duration: 4s;
   font-family: "Courgette", cursive;
@@ -55,7 +57,8 @@ h1 {
 }
 
 .intro-p {
-  font-size: 2.5em;
+  font-size: 4vh;
+  font-size: 4svh;
   height: 75%;
   color: rgba(245, 240, 240, 0.8);
   font-family: "Urbanist", sans-serif;
@@ -68,20 +71,6 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 1000px) and (min-width: 501px) {
-  h1 {
-    font-size: 4em;
-  }
-  .intro-p {
-    font-size: 2em;
-  }
-
-  .hero-text {
-    text-align: center;
-    height: 65%;
-  }
-}
-
 @media only screen and (max-width: 500px) {
   .hero-text {
     justify-content: center;
@@ -89,9 +78,9 @@ h1 {
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 5.5vh;
   }
   .intro-p {
-    font-size: 1.5em;
+    font-size: 2.5vh;
   }
 }
