--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -30,7 +30,7 @@
   height: 100vh;
   height: 100svh;
   width: 100%;
-  background-color: rgba(43, 42, 42, 0.2);
+  background-color: rgba(43, 42, 42, 0.5);
   position: absolute;
   top: 0;
   z-index: 0;
@@ -38,13 +38,14 @@
 
 .hero-text {
   width: 100%;
-  height: 75%;
+  height: 80vh;
+  height: 80svh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   text-align: center;
   z-index: 2;
+  color: rgba(240, 240, 240);
 }
 
 h1 {
@@ -53,15 +54,13 @@ h1 {
   animation-name: fade;
   animation-duration: 4s;
   font-family: "Courgette", cursive;
-  color: rgba(245, 240, 240, 0.9);
 }
 
 .intro-p {
   font-size: 4vh;
   font-size: 4svh;
-  height: 75%;
-  color: rgba(245, 240, 240, 0.8);
   font-family: "Urbanist", sans-serif;
+  margin-block-start: 0%;
 }
 
 @keyframes fade {
@@ -71,7 +70,7 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
   .hero-text {
     justify-content: center;
     text-align: center;
@@ -82,5 +81,12 @@ h1 {
   }
   .intro-p {
     font-size: 2.5vh;
+    height: 100vh;
+  }
+}
+
+@media only screen and (max-height: 400px) {
+  .hero-text {
+    height: 72vh;
   }
 }
