--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 15%;
+  top: 13vh;
   height: fit-content;
   background-color: rgba(25, 29, 28, 0.85);
   text-align: center;
