--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Courgette&family=Sora:wght@200;400;500&family=Urbanist:wght@300;500;600;700&display=swap");
 
-body {
-  background: none;
-}
-
 .contact {
   background-image:
   /* top, transparent red, faked with gradient */ linear-gradient(
@@ -15,10 +11,10 @@ body {
   height: 100vh;
   height: 100svh;
   background-position: center;
-  position: relative;
+  /* position: relative; */
   background-repeat: no-repeat;
   background-size: cover;
-  padding-block-start: 7%;
+  padding-block-start: 10vh;
 }
 
 .contact-heading {
@@ -28,8 +24,8 @@ body {
 
 #contact-form {
   background-color: rgb(250, 248, 248, 0.5);
-  padding-block-start: 1%;
-  width: 40%;
+  padding-block-start: 1vh;
+  width: 60%;
   border-radius: 5px;
 }
 
@@ -62,13 +58,28 @@ body {
 @media only screen and (max-width: 1400px) {
   .contact {
     background-size: cover;
-    height: 900px;
+    height: 950px;
     padding-block-start: 10%;
   }
-
   #contact-form {
-    padding-block-start: 1%;
-    width: 40%;
-    border-radius: 5px;
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .contact {
+    padding-block-start: 17%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .contact {
+    padding-block-start: 20%;
+  }
+}
+
+@media only screen and (min-height: 1000px) {
+  .contact {
+    height: 100vh;
   }
 }
