fixed responsiveness issues on nav, home, and projects

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -140,3 +140,9 @@ a.project-github {
     margin-block-start: 6vh;
   }
 }
+
+@media only screen and (max-height: 200px) {
+  .projects {
+    height: 300px;
+  }
+}
